--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "4.28",
     "@tanstack/react-query-devtools": "4.28",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +29,7 @@
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.6.0",
+    "@types/node": "^20.6.1",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/stripe": "^8.0.417",
