--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "server.js",
   "scripts": {
-    "devStart": "ts-node server.ts",
-    "start": "ts-node server.ts"
+    "devStart": "node server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/aws-lambda": "^8.10.121",
     "@types/express": "^4.17.17",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
