--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,6 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "helmet-csp": "^3.4.0",
     "http-proxy-middleware": "^2.0.6",
     "stripe": "^13.5.0"
   },
@@ -27,5 +26,8 @@
     "@types/node": "^20.6.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
